--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,16 +16,30 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Backend Image
+      # 👇 This block creates dynamic tags based on Git commit & timestamp
+      - name: Generate image tags
+        id: vars
+        run: |
+          TIMESTAMP=$(date +%Y%m%d-%H%M)
+          GIT_SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
+          echo "TAG_DATE=${TIMESTAMP}" >> $GITHUB_ENV
+          echo "TAG_SHA=${GIT_SHORT_SHA}" >> $GITHUB_ENV
+          echo "Generated tags: ${TIMESTAMP}, ${GIT_SHORT_SHA}"
+
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
-          context: ./backend
+          context: .
           file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_DATE }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_SHA }}
+
