--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,27 +10,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Generate version tags
+        id: vars
+        run: |
+          TIMESTAMP=$(date +'%Y%m%d-%H%M')
+          GIT_SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
+
+          # Check for the latest semantic version tag
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
+          echo "Latest tag: $LATEST_TAG"
+
+          # Extract the numeric part (e.g., 1.0.0 → 1.0.1)
+          VERSION=${LATEST_TAG#v}
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          NEW_VERSION="v$MAJOR.$MINOR.$((PATCH + 1))"
+
+          echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
+          echo "TAG_DATE=$TIMESTAMP" >> $GITHUB_ENV
+          echo "TAG_SHA=$GIT_SHORT_SHA" >> $GITHUB_ENV
+
+          echo "Generated tags: $NEW_VERSION, $TIMESTAMP, $GIT_SHORT_SHA"
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # 👇 This block creates dynamic tags based on Git commit & timestamp
-      - name: Generate image tags
-        id: vars
-        run: |
-          TIMESTAMP=$(date +%Y%m%d-%H%M)
-          GIT_SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
-          echo "TAG_DATE=${TIMESTAMP}" >> $GITHUB_ENV
-          echo "TAG_SHA=${GIT_SHORT_SHA}" >> $GITHUB_ENV
-          echo "Generated tags: ${TIMESTAMP}, ${GIT_SHORT_SHA}"
 
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
@@ -40,6 +51,6 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.NEW_VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_DATE }}
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_SHA }}
-
