--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write  # Needed to push Git tags
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch all commits and tags
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -22,11 +27,10 @@ jobs:
           TIMESTAMP=$(date +'%Y%m%d-%H%M')
           GIT_SHORT_SHA=$(echo "${GITHUB_SHA}" | cut -c1-7)
 
-          # Check for the latest semantic version tag
+          # Find latest semantic version tag
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v1.0.0")
           echo "Latest tag: $LATEST_TAG"
 
-          # Extract the numeric part (e.g., 1.0.0 → 1.0.1)
           VERSION=${LATEST_TAG#v}
           IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
           NEW_VERSION="v$MAJOR.$MINOR.$((PATCH + 1))"
@@ -35,7 +39,7 @@ jobs:
           echo "TAG_DATE=$TIMESTAMP" >> $GITHUB_ENV
           echo "TAG_SHA=$GIT_SHORT_SHA" >> $GITHUB_ENV
 
-          echo "Generated tags: $NEW_VERSION, $TIMESTAMP, $GIT_SHORT_SHA"
+          echo "✅ Generated tags: $NEW_VERSION, $TIMESTAMP, $GIT_SHORT_SHA"
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -54,3 +58,13 @@ jobs:
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.NEW_VERSION }}
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_DATE }}
             ${{ secrets.DOCKERHUB_USERNAME }}/cineworld-backend:${{ env.TAG_SHA }}
+
+      - name: Push Git Tag to Repository
+        if: success()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag ${{ env.NEW_VERSION }}
+          git push origin ${{ env.NEW_VERSION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
